# cmake-vcpg-ci-sample

./: .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
.github/workflows/: cmake.yml
model/: CMakeLists.txt  schema.proto
test/: CMakeLists.txt  sample_test.cc
